--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc --watch",
+    "build": "tsc",
     "lint": "tslint -c tslint.json src/**/*.ts",
     "prepublish": "npm run build",
     "start": "ts-node-dev --respawn --transpile-only src/server.ts"
