--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "mongoose": "^8.0.2",
     "ts-node-dev": "^2.0.0",
     "tslint": "^6.1.3"
