--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.3.2"
+    "@types/mongoose": "^5.11.97",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
@@ -26,7 +27,7 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.2",
+    "mongoose": "^8.0.3",
     "ts-node-dev": "^2.0.0",
     "tslint": "^6.1.3"
   },
